--- a/contactList/build.gradle
+++ b/contactList/build.gradle
@@ -38,3 +38,17 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 }
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'com.github.lostankit7'
+                artifactId = 'multi-contact-selection'
+                version = '1.1'
+            }
+        }
+    }
+}
